# SubStream-Protocol-Contracts

./: Cargo.toml  SECURITY.md  WASM_COMPRESSION.md
.github/workflows/: formal-verification.yml
contracts/substream_contracts/: Cargo.toml  Makefile
contracts/substream_contracts/src/: billing_dispute.rs  lib.rs  test.rs  test_active_subscriptions_query.rs  test_affiliate_referral.rs  test_dao_treasury.rs  test_family_vault.rs  test_formal_verification.rs  test_merchant_registry.rs  test_reentrancy_guard.rs  test_tiny_streams.rs  test_vacation_mode.rs  test_withdrawal_consistency.rs
docs/: GOVERNANCE.md
scripts/: check_wasm_size.sh
