[workspace]
resolver = "2"
members = [
  "contracts/*",
  "simulator",
]

[workspace.dependencies]
soroban-sdk = "25"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# ==========================================
# Issue #51: WASM Size Optimization Profile
# ==========================================
[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization (removes dead code)
codegen-units = 1      # Compile crate as a single unit for maximum optimization
panic = "abort"        # Remove panic unwinding (saves significant space)
strip = "debuginfo"    # Strip debug info but keep symbols for error tracing
